Instantiated Hair Object which has dupligroup children and hidden orig objects of group crash at render #51524

Closed
opened 2017-05-16 21:28:42 +02:00 by Yusuke Fujiwara · 11 comments

System Information
Operating system and graphics card
Windows 10 64bit
GeForce GTX TITAN X

Blender Version
Broken: 2.78c e92f235283

Short description of error
Linked Particle Hair Object which duplicates objects or group, has child particles cause crashing when start rendering.

Exact steps for others to reproduce the error
at Source file:
Make Suzanne or something.
Make Plane and set Particle Hair. Set Suzanne as Duplicate Object. Set Children Simple or Interpolated.
Group them.

at Rendering file
Link Source's group.
try Render.
Crash.

that's all.
when setting Children None, blender doesn't crash.

source.blend

render.blend

**System Information** Operating system and graphics card Windows 10 64bit GeForce GTX TITAN X **Blender Version** Broken: 2.78c e92f235283 **Short description of error** Linked Particle Hair Object which duplicates objects or group, has child particles cause crashing when start rendering. **Exact steps for others to reproduce the error** at Source file: Make Suzanne or something. Make Plane and set Particle Hair. Set Suzanne as Duplicate Object. Set Children Simple or Interpolated. Group them. at Rendering file Link Source's group. try Render. Crash. that's all. when setting Children None, blender doesn't crash. [source.blend](https://archive.blender.org/developer/F600236/source.blend) [render.blend](https://archive.blender.org/developer/F600237/render.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @YusukeFujiwara

Added subscriber: @YusukeFujiwara
Yusuke Fujiwara changed title from Linked Particle Hair Object which has child particle cause crush when render to Linked Particle Hair Object which has child particle cause crashing when render 2017-05-17 00:57:40 +02:00

Added subscriber: @fablefox

Added subscriber: @fablefox
Can you provide the crash log? https://docs.blender.org/manual/en/dev/troubleshooting/crash.html

Sorry, I couldn't find any crash log in my temp folder.

So I launched blender from cmd, and tried to cause this crash.
Then I got messages below.

C:\Program Files\Blender Foundation\Blender>blender
Read new prefs: C:\Users\ysksa\AppData\Roaming\Blender Foundation\Blender\2.78\config\userpref.blend
found bundled python: C:\Program Files\Blender Foundation\Blender\2.78\python
drop file C:\test\render.blend
read blend: C:\test\render.blend
Info: Read library: 'C:\test\source.blend', '//source.blend', parent ''
Info: Read library: 'C:\test\source.blend', '//source.blend', parent ''

(I pushed "Render" button at this point)

Error: EXCEPTION_ACCESS_VIOLATION

Sorry, I couldn't find any crash log in my temp folder. So I launched blender from cmd, and tried to cause this crash. Then I got messages below. C:\Program Files\Blender Foundation\Blender>blender Read new prefs: C:\Users\ysksa\AppData\Roaming\Blender Foundation\Blender\2.78\config\userpref.blend found bundled python: C:\Program Files\Blender Foundation\Blender\2.78\python drop file C:\test\render.blend read blend: C:\test\render.blend Info: Read library: 'C:\test\source.blend', '//source.blend', parent '<direct>' Info: Read library: 'C:\test\source.blend', '//source.blend', parent '<direct>' (I pushed "Render" button at this point) Error: EXCEPTION_ACCESS_VIOLATION

Added subscriber: @mont29

Added subscriber: @mont29

Crashes in RE_addRenderInstance(), when retrieving 11th child particle (part_index = psys->child[obi->index - psys->totpart].parent; with obi->index == 20 and psys->totpart == 10).

Think this is a problem between preview and render number of childs, here clearly the 10 first ones are OK, but not beyond (file is set to 1 child per particle in preview, and 10 per particle in render)… Still digging to try to understand that mess better.

Crashes in `RE_addRenderInstance()`, when retrieving 11th child particle (`part_index = psys->child[obi->index - psys->totpart].parent;` with `obi->index` == 20 and `psys->totpart` == 10). Think this is a problem between preview and render number of childs, here clearly the 10 first ones are OK, but not beyond (file is set to 1 child per particle in preview, and 10 per particle in render)… Still digging to try to understand that mess better.

There is nothing related to data being linked actually, as you can see in attached file below, it's enough to instantiate a group with dupliob particle system, and then hide (on another layer e.g.) original objects of the group…

Still trying to figure out a fix for this mess…

instantiated_psys_crasher.blend

There is nothing related to data being linked actually, as you can see in attached file below, it's enough to instantiate a group with dupliob particle system, and then hide (on another layer e.g.) original objects of the group… Still trying to figure out a fix for this mess… [instantiated_psys_crasher.blend](https://archive.blender.org/developer/F604136/instantiated_psys_crasher.blend)
Bastien Montagne changed title from Linked Particle Hair Object which has child particle cause crashing when render to Instantiated Hair Object which has dupligroup children and hidden orig objects of group crash at render 2017-05-19 19:31:30 +02:00

This issue was referenced by b6f5e8d9a1

This issue was referenced by b6f5e8d9a1aa29720167cf1b1700f76b3e5950a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I've tried to use today's daily build. It doesn't crash!
I'm very happy. Thanks for your work!

I've tried to use today's daily build. It doesn't crash! I'm very happy. Thanks for your work!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51524
No description provided.