Fix T51524: Instantiated Hair Object which has dupligroup children and hidden orig objects of group crash at render.

Note that this is speculative fix, actually precisely understanding what
happens in this code is... not easy.